--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -2,6 +2,7 @@
 $base: rgb(202, 73, 73);
 $white: #fcfcfc;
 $pink: #ed2f8b;
+$purple: #B824ED;
 $yellow: #ffcf7b;
 $accent: #111;
 $very-light-grey: #F2F2F2;
@@ -40,4 +41,4 @@ $space-xl: 20px;
 $space-xxl: 50px;
 $col-spacing: 2.5%;
 
-$header-min-height:50px;
+$header-height:2.9rem;
