--- a/static/styles/scss/_forms.scss
+++ b/static/styles/scss/_forms.scss
@@ -3,6 +3,7 @@ form{
 }
 
 textarea{
+    position:relative;
     resize:vertical;
     font-family:inherit;
     font-weight:inherit;
@@ -10,6 +11,7 @@ textarea{
     min-height:2.6em;
     max-height:250px;
 }
+
 
 input{
     font-family:inherit;
@@ -19,57 +21,56 @@ input{
 
 .input-container{
     display:flex;
+    align-items: center;
     margin-top:$space-lg;
     margin-bottom:$space-lg;
-    background-color:$dark-grey;
+    background-color: white;
+    border-radius: 1.4rem;
  }
  
  .input-field{
+    position:relative;
     width:100%;
-    padding: 0.7em;
+    padding: 0.8em;
+    padding-left: 1em;
     font-size: 1em;
     margin: 0px;
     outline:none;
     box-sizing: border-box;
-    border-radius: 0px;
-    border-right:0px;
-    border:1px $dark-grey solid;
-    border-top:0px;
-    border-left:0px;
+    border-radius: 1.4rem 0px 0px 1.4rem;
+    border:0px;
  }
 
-.input-field:focus{
-    border-image-slice: 1;
-    border-width: 1px;
-    border-bottom:1px solid;
-    border-image-source: linear-gradient(to left, $yellow, $pink);
-}
+ .fa-input-icon::after{
+    position:absolute;
+    top:0px;
+    left:0px;
+    width: 2px;
+    height:100%;
+    background-image: linear-gradient(to bottom, $pink, $yellow);
+    transition: height 1s ease-in;
+ }
 
 .button-muted{
     border:none;
     padding:0px;
     margin:0px;
+    background-color:inherit;
 }
 
  .fa-input-icon{
+    position:relative;
     color:$white;
-    background-color: $dark-grey;
+    background-image: radial-gradient(100% 100% at 100% 100%, $yellow, $pink);
     font-size: 1em;
     width: 1.2em;
     height: 1em;
-    padding: 0.7em;
-    border:2px $dark-grey solid;
+    margin-left:2px;
+    margin-right:2px;
+    padding: .8em;
+    border-radius: 50%;
     text-align: center;
     transition: padding 100ms ease-out, font-size 100ms ease-out;
-}
-
-.fa-input-icon-hover:hover{
-    color:$white;
-    background-color: $dark-grey;
-    font-size: 1.2em;
-    width: 1.2em;
-    height: 1em;
-    padding: 0.5em;
 }
 
 .form-alert{
@@ -126,4 +127,20 @@ input{
         vertical-align:middle;
         content:"\f00d \0020";
     }
+}
+
+.form-submit{
+    display: inline-block;
+    padding: 0.8rem 2rem;
+    border:0px;
+    border-radius: 1.6rem;
+    background-image: radial-gradient(100% 100% at 100% 100%, $yellow, $pink);
+    color: $white;
+    font-size:1em;
+    font-weight:400;
+    cursor:pointer;
+}
+
+.form-submit:hover{
+    background-image: radial-gradient(110% 110% at 100% 100%, $yellow, $pink);
 }
