--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -113,7 +113,7 @@ body {
 .col-1-md {
   display: grid;
 }
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .col-1-md {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
@@ -123,7 +123,7 @@ body {
 .col-2-md {
   display: grid;
 }
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .col-2-md {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
@@ -134,7 +134,7 @@ body {
 .col-3-md {
   display: grid;
 }
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .col-3-md {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
@@ -243,7 +243,7 @@ body {
   align-items: center;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .center-content-x-md {
     display: flex;
     justify-items: center;
@@ -251,14 +251,14 @@ body {
   }
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .center-content-y-md {
     display: flex;
     align-items: center;
   }
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .center-content-xy-md {
     display: flex;
     justify-items: center;
@@ -297,7 +297,7 @@ body {
   }
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .hidden-md {
     display: none;
   }
@@ -307,7 +307,7 @@ body {
   justify-self: center;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .center-self-x-sm {
     justify-self: center !important;
   }
@@ -367,7 +367,7 @@ body {
   }
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .w-100-md {
     width: 100%;
   }
@@ -623,7 +623,7 @@ img {
 html {
   font-size: 11px;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   html {
     font-size: 12px;
   }
@@ -784,7 +784,7 @@ blockquote {
   text-align: center;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .text-center-sm {
     text-align: center;
   }
@@ -951,17 +951,38 @@ input {
   position: relative;
 }
 
-#section-1 .bg-image {
+#landing-bg-container {
+  position: absolute;
   top: 0px;
-  left: 50%;
-  transform: translateX(-20%);
-  height: 65%;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+@media (min-width: 639px) {
+  #landing-bg-container {
+    width: 50%;
+    height: 100%;
+  }
+}
+
+#section-1 .bg-image {
+  top: 45%;
+  left: 0px;
+  min-height: 46%;
+  min-width: 130%;
+  transform: translateY(-100%);
+  object-fit: cover;
   filter: drop-shadow(10px 2px 10px rgba(0, 0, 0, 0.35));
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #section-1 .bg-image {
+    top: 100%;
+    left: 50%;
     height: 100%;
-    transform: translateX(-16%);
+    min-height: 50%;
+    min-width: 70%;
+    transform: translateX(-16%) translateY(-100%);
   }
 }
 
@@ -969,9 +990,12 @@ input {
   display: flex;
   justify-content: flex-end;
   align-self: flex-end;
+  height: 50%;
+  width: auto;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #landing-logo-container {
+    height: auto;
     align-self: center;
   }
 }
@@ -979,7 +1003,13 @@ input {
 #landing-logo {
   position: relative;
   z-index: 1;
-  width: 63%;
+  height: 100%;
+}
+@media (min-width: 639px) {
+  #landing-logo {
+    height: auto;
+    width: 63%;
+  }
 }
 
 #landing-text-wrapper {
@@ -987,8 +1017,9 @@ input {
   align-self: flex-start;
   grid-row: 2/2;
   text-align: left;
+  padding: 20px 0px;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #landing-text-wrapper {
     text-align: left;
     align-self: center;
@@ -1016,15 +1047,27 @@ input {
 
 #section-2 .bg-image {
   top: 0px;
-  left: 100%;
+  left: 103%;
   height: 100%;
   transform: translateX(-100%);
   filter: drop-shadow(10px 2px 10px rgba(0, 0, 0, 0.35));
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
+  #section-2 .bg-image {
+    left: 60%;
+  }
+}
+@media (min-width: 1920px) {
   #section-2 .bg-image {
     left: 53.5%;
   }
+}
+
+#section-2 .watermark-image {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
 }
 
 .blob-text-left {
@@ -1082,7 +1125,7 @@ input {
 .project-cards {
   padding: 0px 0px 1px 0px;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .project-cards {
     padding: 0px 12.5% 1px 12.5%;
   }
@@ -1100,7 +1143,7 @@ input {
   overflow: hidden;
   box-shadow: 0px 15px 35px rgba(0, 0, 0, 0.3);
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .project-card {
     height: 50vh;
     grid-template-columns: repeat(2, 1fr);
@@ -1167,7 +1210,7 @@ input {
   align-self: flex-start;
   grid-template-columns: repeat(3, 1fr);
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #capabilities-logos {
     grid-column: 1/1;
     grid-row: 1/1;
@@ -1225,7 +1268,7 @@ input {
 #capabilities-content {
   grid-row: 1/1;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #capabilities-content {
     grid-column: 2/2;
     grid-row: 1/1;
@@ -1249,7 +1292,7 @@ input {
   grid-gap: 0px;
   background-repeat: no-repeat;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #page3 {
     background-position: 50% 0%;
   }
@@ -1294,7 +1337,7 @@ input {
   transform: translateY(-50%);
   opacity: 0;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .project-text {
     width: calc(100% - (7.5% * 3));
     right: calc(7.5% * 3);
@@ -1341,7 +1384,7 @@ input {
   transition: transform 1550ms;
   transition-timing-function: cubic-bezier(var(--cubic-buzier));
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #project-gears {
     top: 20%;
     height: 60%;
@@ -1360,7 +1403,7 @@ input {
   background-position: 55% 0%;
   height: 100%;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #page4 {
     grid-column-gap: 13%;
     background-position: 50% 0%;
@@ -1393,7 +1436,7 @@ input {
   transition: opacity 500ms ease-out;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .blog-highlight {
     order: 1;
   }
@@ -1488,7 +1531,7 @@ input {
 .blog-details-container {
   padding-left: 0px;
 }
-@media (max-width: 699px) {
+@media (max-width: 639px) {
   .blog-details-container {
     order: 1;
   }
@@ -1684,7 +1727,7 @@ input {
   transition: clip-path ease-in-out 300ms;
   transition-timing-function: var(--cubic-buzier);
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .nav-wrapper {
     position: relative;
     display: flex;
@@ -1708,7 +1751,7 @@ input {
   width: 70%;
   margin-top: 50px;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #site-nav {
     display: flex;
     justify-content: space-between;
@@ -1729,7 +1772,7 @@ input {
   padding-left: 12%;
   text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .nav-item {
     display: flex;
     align-items: center;
@@ -1747,7 +1790,7 @@ input {
   bottom: 0px;
   background-color: white;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #mobile-nav-background {
     display: none;
   }
@@ -1761,7 +1804,7 @@ input {
   transform: rotate(-70deg);
 }
 
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   .nav-toggle {
     display: none;
   }
@@ -2011,7 +2054,7 @@ svg .path-a {
 #footer-wrapper p, #footer-wrapper div {
   font-size: 100%;
 }
-@media (min-width: 699px) {
+@media (min-width: 639px) {
   #footer-wrapper p, #footer-wrapper div {
     font-size: 90%;
   }
